# cohortqa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cohortqa/: __init__.py
cohortqa/core/: __init__.py  _credit_check.py  analyzer.py  behavior.py  orchestrator.py  persona_schema.py  replayer.py  runner.py  scenario_runner.py  synthesizer.py
cohortqa/examples/quickstart/: README.md  _expected-sample-output.md  app.yaml
cohortqa/examples/quickstart/personas/: keyboard-only.yaml  returning-user.yaml  rusher.yaml
cohortqa/examples/quickstart/site/: add.html  detail.html  done.html  index.html
cohortqa/personas/: cautious-first-timer.yaml  error-prone.yaml  skeptic.yaml  skimmer.yaml  wanderer.yaml
cohortqa/schemas/: app-config.schema.yaml  persona.schema.yaml  scenario.schema.yaml
cohortqa/tests/: test_analyzer.py  test_behavior.py  test_injection_resistance.py  test_orchestrator.py  test_persona_schema.py  test_phase_c.py  test_replayer.py  test_runner_probe.py  test_runner_smoke.py  test_scenario_runner.py  test_synthesizer.py
cohortqa/tests/fixtures/: invalid_app_bad_friction_type.yaml  invalid_app_bad_url.yaml  invalid_app_missing_keys.yaml  invalid_app_route_path_no_slash.yaml  invalid_app_route_uses_unknown_action.yaml  invalid_persona_bad_click_speed.yaml  invalid_persona_unknown_sensitivity.yaml  invalid_scenario_bad_api_mock.yaml  invalid_scenario_no_mods.yaml  valid_app.yaml  valid_persona.yaml  valid_scenario.yaml
docs/audits/: 2026-05-22-personalab-rereview.md  2026-05-23-personalab-depth-design.md  2026-05-23-personalab-dispatch-test.md  2026-05-23-personalab-forge-pass2.md  2026-05-23-personalab-phase-b.md  2026-05-23-personalab-rework.md  2026-05-24-extraction-recipe.md  2026-05-24-personalab-phase-c.md  2026-05-24-personalab-prepublish.md  2026-05-24-personalab-publish-smoke-gates.md
