[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalab"
version = "0.1.0"
description = "Cross-persona UX-friction detector + release-over-release regression harness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["qa", "ux", "playwright", "claude", "personas", "testing"]
authors = [{ name = "Nick Ruzicka" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.40,<1.0",
    "playwright>=1.40,<2.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
# After `pip install personalab`, `personalab` is the orchestrator entry.
personalab = "personalab.core.orchestrator:main"

[project.urls]
Source = "https://github.com/nick-ruzicka/personalab"
Issues = "https://github.com/nick-ruzicka/personalab/issues"

[tool.setuptools]
# Treat `personalab/` itself as the package root. Once this lands in a
# fresh repo (the "extraction" pass), `personalab/` becomes the package
# directory and `pyproject.toml` moves to the repo root. For now,
# both this file and the `core/` submodule live one level inside.
packages = [
    "core",
    "personas",
    "schemas",
]
package-dir = { "" = "." }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
